--- a/index.html
+++ b/index.html
@@ -217,95 +217,127 @@ const jobData = {
     '1': {
         title: '普工 / 保安',
         salary: '20-24元/时',
-        summary: `
-            <li><strong>工作地点:</strong> 渝北区金渝地铁站附近</li>
-            <li><strong>福利待遇:</strong> 包吃包住，4-6人间</li>
-            <li><strong>年龄要求:</strong> 16-48岁</li>
-            <li><strong>来源:</strong> 中介-人事经理付女士</li>`,
+        summary: `<li><strong>工作地点:</strong> 渝北区金渝地铁站附近</li><li><strong>福利待遇:</strong> 包吃包住，4-6人间</li><li><strong>年龄要求:</strong> 16-48岁</li><li><strong>来源:</strong> 中介-人事经理付女士</li>`,
         analysis: '【成功率极高】对方已明确回复17岁符合要求，并且包吃住，是当前最优先的选择，建议立即联系面试。',
         analysisClass: 'high',
-        raw: `【一】工作范围:重庆主厂区\n【二】招聘岗位:\n1、厂区门岗保安、监控室保安...\n2、两班倒普工，大部分坐着上班\n【三】薪资待遇:\n1、保安150-160/天...\n2、普工20-24/小时，综合月收入5500-6500以上...\n【五】招聘要求:\n1、年满16-48岁以上，学历不限...`
+        raw: `你好，这边职责发你看一下，你看可以接受吗 现大量招收长期工，短期工！可日结!
+【一】工作范围:重庆主厂区
+【二】招聘岗位:
+1、厂区门岗保安、监控室保安，负责厂区安检，检查是否有管制刀具、违禁物品等
+2、两班倒普工，大部分坐着上班
+【三】薪资待遇:
+1、保安150-160/天，转正后买六险一金，200/天
+2、普工20-24/小时，综合月收入5500-6500以上，上六休一每月20号发放工资。
+3、工作时间:白班，晚班，工作期轮换休息
+4、宿舍4~6人间
+【四】福利待遇:包吃包住，水电费平摊，宿舍4-6人/间，6-8人/间，独立卫生间热水器
+【五】招聘要求:
+1、年满16-48岁以上，学历不限
+2、身体健康，持本人有效身份证`
     },
     '2': {
         title: '厂区保安',
         salary: '200元/天',
-        summary: `
-            <li><strong>工作地点:</strong> 渝北区双凤桥产业园</li>
-            <li><strong>福利待遇:</strong> 包吃包住，月休四天</li>
-            <li><strong>年龄要求:</strong> 接受17岁</li>
-            <li><strong>来源:</strong> 中介-铁锤妹妹👊</li>`,
+        summary: `<li><strong>工作地点:</strong> 渝北区双凤桥产业园</li><li><strong>福利待遇:</strong> 包吃包住，月休四天</li><li><strong>年龄要求:</strong> 接受17岁</li><li><strong>来源:</strong> 中介-铁锤妹妹👊</li>`,
         analysis: '【成功率极高】薪资待遇非常不错，对方已接受你的年龄，是另一个绝佳选择。明确包吃住解决了核心问题。',
         analysisClass: 'high',
-        raw: `厂区坐班巡逻保安200元/天，工作时间 8-8 中间休息两个小时...工资:每月5号准时发...住宿:4-6人间的标准宿舍...包中午晚上两餐 包住宿水电费平摊...`
+        raw: `厂区坐班巡逻保安200元/天工作时间 8-8 中间休息两个小时 总工作时间10个小时 周末单休  2班倒   节假日可以选择放假或者加班三倍薪资 工资:每月5号准时发，直接打到银行卡里面。住宿:4-6人间的标准宿舍，有独立卫生间和24小时热水 包中午晚上两餐 包住宿水电费平摊 目前这个岗位是需要住宿的,招长期，接受短期， 可以接受不`
     },
     '3': {
         title: '传音科技(学生工)',
         salary: '4400-4900/月',
-        summary: `
-            <li><strong>工作地点:</strong> 渝北区玉峰山镇</li>
-            <li><strong>福利待遇:</strong> 4人间上床下桌，餐补300元</li>
-            <li><strong>年龄要求:</strong> 16-20岁</li>
-            <li><strong>来源:</strong> 中介-AN00-劳大</li>`,
+        summary: `<li><strong>工作地点:</strong> 渝北区玉峰山镇</li><li><strong>福利待遇:</strong> 4人间上床下桌，餐补300元</li><li><strong>年龄要求:</strong> 16-20岁</li><li><strong>来源:</strong> 中介-AN00-劳大</li>`,
         analysis: '【成功率高】专门的学生工通道，年龄完全符合。大厂背景，住宿条件好，非常靠谱。中介说20号开始面试。',
         analysisClass: 'high',
-        raw: `🆘传音科技招聘🆘（学生工/小时工同时招聘）\n一：学生工，16-20岁 ，男女不限 ，企业直签，底薪制\n1⃣️基本工资2330底薪+加班工资（平时加班1.5倍20.08/小时...）+餐补(300）+全勤奖（100）+夜班补贴（15一晚），月综合工资4400-4900元左右...`
+        raw: `🆘传音科技招聘🆘（学生工/小时工同时招聘）
+
+一：学生工，16-20岁 ，男女不限 ，企业直签，底薪制
+
+1⃣️基本工资2330底薪+加班工资（平时加班1.5倍20.08/小时，周末加班2倍26.78/小时。+餐补 (300）+全勤奖（100）+夜班补贴（15一晚），月综合工资4400-4900元左右
+2⃣️实行刷卡吃饭，餐补每月300元。住宿4人间，每月20号发上个月工资。
+
+每月20号发放上个月薪资`
     },
     '4': {
         title: '北碚暑假工',
         salary: '16元/小时',
-        summary: `
-            <li><strong>工作地点:</strong> 北碚</li>
-            <li><strong>福利待遇:</strong> 0元入职，可预支，可带手机</li>
-            <li><strong>年龄要求:</strong> 16-35岁</li>
-            <li><strong>来源:</strong> 重庆厂区直招发单群6群</li>`,
+        summary: `<li><strong>工作地点:</strong> 北碚</li><li><strong>福利待遇:</strong> 0元入职，可预支，可带手机</li><li><strong>年龄要求:</strong> 16-35岁</li><li><strong>来源:</strong> 重庆厂区直招发单群6群</li>`,
         analysis: '【成功率高】明确的暑假工招聘，年龄要求清晰。0元入职和可预支对前期资金紧张的你很友好。',
         analysisClass: 'high',
-        raw: `[啤酒]坐班站班+手上活+日薪168/天[啤酒]\n[玫瑰]可0元入职+分钱不掏那种...\n男女不限：16—35岁\n月结学生工：14+2=16/H＝160/天（含2元满期补贴），试用期7天...综合薪资：4000—5000/月。`
+        raw: `6/16  北碚暑假工企业
+
+[啤酒][啤酒]坐班站班+手上活+日薪168/天[啤酒][啤酒]
+[玫瑰]可0元入职+分钱不掏那种
+[福]车间可带手机
+[炸弹]可收无身份证原件的人员
+[烟花]15天后每周可预支500元/周
+
+男女不限：16—35岁
+
+[玫瑰]薪资待遇：
+工期要求做到8月20号以后
+月结学生工：
+14+2=16/H＝160/天（含2元满期补贴），试用期7天，试用期内离职无工资，特别说明满期补贴做满工期按16/H发，做不满工期的按14/H发，两班倒，综合薪资：4000—5000/月。`
     },
     '5': {
         title: '西永京东方-晶远',
         salary: '4500-5000/月',
-        summary: `
-            <li><strong>工作地点:</strong> 西永</li>
-            <li><strong>福利待遇:</strong> 4人间住宿，大厂背景</li>
-            <li><strong>年龄要求:</strong> 16-38岁</li>
-            <li><strong>来源:</strong> 重庆厂区直招发单群6群</li>`,
+        summary: `<li><strong>工作地点:</strong> 西永</li><li><strong>福利待遇:</strong> 4人间住宿，大厂背景</li><li><strong>年龄要求:</strong> 16-38岁</li><li><strong>来源:</strong> 重庆厂区直招发单群6群</li>`,
         analysis: '【成功率中等】年龄符合，但需穿无尘服，且要自费体检88元。大厂工作相对稳定，可以作为备选。',
         analysisClass: 'medium',
-        raw: `西永京东方-晶远（周日）\n🔺招聘要求：男女不限，16-38岁。当天面试合格，体检...重庆新欧医院体检（自费88元）\n🔺薪资待遇：底薪2330+加班工资=综合薪资4500-5000元，住宿4人间...\n🌈🌈工作内容：...需穿戴静电服或无尘服。`
+        raw: `西永京东方-晶远（周日）
+
+🔺招聘要求：男女不限，16-38岁。当天面试合格，体检，分寝室，重庆新欧医院体检（自费88元）体检尽量空腹
+
+🔺薪资待遇：底薪2330+加班工资=综合薪资4500-5000元，住宿4人间。表现优异可留下来长期发展
+
+🌈🌈工作内容：
+1.负责不良品识别，推车输送；
+2.负责不良品外观擦拭，修后检验；
+3.无尘车间，需穿戴静电服或无尘服。非流水线车间，上岗前会有 专门培训员进行培训，简单操作易上手。`
     },
     '6': {
         title: '璧山日结电子厂',
         salary: '140-150元/天',
-        summary: `
-            <li><strong>工作地点:</strong> 璧山</li>
-            <li><strong>福利待遇:</strong> 日结，包吃，不穿无尘服</li>
-            <li><strong>年龄要求:</strong> 男生16-38岁</li>
-            <li><strong>来源:</strong> 中介-Hyh_</li>`,
+        summary: `<li><strong>工作地点:</strong> 璧山</li><li><strong>福利待遇:</strong> 日结，包吃，不穿无尘服</li><li><strong>年龄要求:</strong> 男生16-38岁</li><li><strong>来源:</strong> 中介-Hyh_</li>`,
         analysis: '【成功率中等】日结灵活，年龄符合，不穿无尘服是优点。适合想快速拿到钱或短期过渡。',
         analysisClass: 'medium',
-        raw: `6.16璧山日结临时工电子厂\n白班/夜班大量要人\n不体检+不要押金+不穿无尘服\n最低做1天以上（下班1小时内发放完工资）\n工资日结：白班140/天，夜班150/天...包吃两餐/提供男生临时住宿10元/天...\n男女不限，男生16-38岁...`
+        raw: `6.16号璧山日结临时工电子厂 
+明天白班加人大量要，明天夜班大量要
+不体检+不要押金+不穿无尘服
+最低做1天以上（下班1小时内发放完工资）
+工资日结：白班140/天，夜班150/天（点对点8-8），包吃两餐/提供男生临时住宿10元/天，宿舍押金50，工作（贴标签）流水线，坐到上班
+男女不限，男生16-38岁，女生16-44岁。查案底不查纹身，女生长指甲不行，不要四大家族
+⚠️必须带上身份证原件，不能穿拖鞋凉鞋裙子短裤`
     },
     '7': {
         title: '游轮服务员',
         salary: '4000-5000/月',
-        summary: `
-            <li><strong>工作地点:</strong> 朝天门码头(随船)</li>
-            <li><strong>福利待遇:</strong> 包吃住，带薪休假，五险</li>
-            <li><strong>年龄要求:</strong> 16-35岁</li>
-            <li><strong>来源:</strong> 临时-长寿↹重庆 群聊</li>`,
+        summary: `<li><strong>工作地点:</strong> 朝天门码头(随船)</li><li><strong>福利待遇:</strong> 包吃住，带薪休假，五险</li><li><strong>年龄要求:</strong> 16-35岁</li><li><strong>来源:</strong> 临时-长寿↹重庆 群聊</li>`,
         analysis: '【成功率中等】年龄符合，待遇独特。但工作性质特殊（随船工作），需要考虑是否能适应长期在船上的生活。',
         analysisClass: 'medium',
-        raw: `招聘岗位: 游轮服务员(前台，客房，餐厅，酒吧)\n综合工资4000-5000\n二、任职要求:\n16-35岁，身体健康，形象气质佳...\n三、岗位优势:\n1、工作轻松...\n2、吃住免费...`
+        raw: `招聘岗位:
+游轮服务员(前台，客房，餐厅，酒吧)
+综合工资4000-5000
+(底薪3600(试用期80%)+绩效工资+迎宾激励+奖励，综合4000-5000元/月)
+二、任职要求:
+16-35岁，身体健康，形象气质佳，客房、保洁、后厨放宽条件，沟通能力强，吃苦耐劳无染发、纹身及明显伤疤。
+三、岗位优势:
+1、工作轻松，收入纯度高
+2、吃住免费，免费提供床上用品，工作服
+3、免费环游长江三峡等景点，劳逸结合
+4、每年2-3个月带薪休假
+5、五险
+6、优秀员工奖励+年度体检+员工关爱+大病互助
+四、上班时间:
+每天8-10小时左右，邮轮一个航期为7天(重庆-宜昌-重庆)，每周往返一次
+五、工作地址:
+朝天门码头(随船工作)`
     },
     '8': {
         title: '北碚蔡家日结',
         salary: '17元/小时',
-        summary: `
-            <li><strong>工作地点:</strong> 北碚蔡家</li>
-            <li><strong>福利待遇:</strong> 日结(压一天)</li>
-            <li><strong>年龄要求:</strong> "学生也可以"</li>
-            <li><strong>来源:</strong> 中介-独角兽🦄</li>`,
+        summary: `<li><strong>工作地点:</strong> 北碚蔡家</li><li><strong>福利待遇:</strong> 日结(压一天)</li><li><strong>年龄要求:</strong> "学生也可以"</li><li><strong>来源:</strong> 中介-独角兽🦄</li>`,
         analysis: '【成功率中等】明确提到“学生也可以”，这是一个积极信号。日结压一天风险较低，值得一问。',
         analysisClass: 'medium',
         raw: `北碚蔡家日结压一天17一小时，不体检，低费用入职，学生也可以，打杂，包装去不去`
@@ -313,50 +345,71 @@ const jobData = {
     '9': {
         title: '厂区安检(待确认)',
         salary: '150-200元/天',
-        summary: `
-            <li><strong>工作地点:</strong> 未知</li>
-            <li><strong>福利待遇:</strong> 包吃住，可日结</li>
-            <li><strong>年龄要求:</strong> 16-40岁</li>
-            <li><strong>来源:</strong> 人事孙老师</li>`,
+        summary: `<li><strong>工作地点:</strong> 未知</li><li><strong>福利待遇:</strong> 包吃住，可日结</li><li><strong>年龄要求:</strong> 16-40岁</li><li><strong>来源:</strong> 人事孙老师</li>`,
         analysis: '【成功率低】对方表示要“先查一下17岁可不可以”，之后未回复。需要你主动跟进，但不要抱太大希望。',
         analysisClass: 'low',
-        raw: `岗位职责: 负责厂区安检...\n年龄限制16-40岁以内，包吃包住...\n工资待遇: 150-200/天-可日结`
+        raw: `岗位职责:
+负责厂区安检，检查是否有管制刀具、违禁物品等
+(全部岗位无需工作经验年龄限制16-40岁以内，包吃包住，买社保，月休四天，可以连休自行安排。)
+工作内容:
+主要负责厂区员工上下班进出等安全检查、巡逻
+工作时间:
+白班，晚班，工作期轮换休息。
+工资待遇:
+150-200/天-可日结
+免费吃住，不扣钱
+宿舍4~6人间`
     },
     '10': {
         title: '空港日结临时工',
         salary: '14元/小时',
-        summary: `
-            <li><strong>工作地点:</strong> 空港</li>
-            <li><strong>福利待遇:</strong> 日结，包工作餐</li>
-            <li><strong>年龄要求:</strong> 17–50岁</li>
-            <li><strong>来源:</strong> 招聘群</li>`,
+        summary: `<li><strong>工作地点:</strong> 空港</li><li><strong>福利待遇:</strong> 日结，包工作餐</li><li><strong>年龄要求:</strong> 17–50岁</li><li><strong>来源:</strong> 招聘群</li>`,
         analysis: '【成功率低】年龄正好在最低线上，但薪资不高，工作内容是电商打包，可能比较辛苦。可以作为保底选择。',
         analysisClass: 'low',
-        raw: `6.16空港 日结 日结临时工\n薪资待遇14元/小时\n工作内容: 电商打包 装箱 秤重 分拣...\n男女不限17–50岁。下班次日结算工资...\n上班地址：空港万纬冷链物流园2号门`
+        raw: `6.16空港 日结 日结临时工
+薪资待遇14元/小时
+工作内容: 电商打包 装箱 秤重 分拣（工作简单，手上活，都是轻货）包吃免费工作餐。
+
+上班时间：上午10:00--22:00左右。
+男女不限17–50岁。下班次日结算工资，可微信，可银行卡
+
+上班地址：空港万纬冷链物流园2号门
+集合时间：上午9:20
+提示:带上身份证原件，银行卡号，薄外套`
     },
     '11': {
         title: '合川电子厂',
         salary: '15元/小时',
-        summary: `
-            <li><strong>工作地点:</strong> 合川</li>
-            <li><strong>福利待遇:</strong> 包吃，月休4天</li>
-            <li><strong>年龄要求:</strong> 16-45岁 (女生为主)</li>
-            <li><strong>来源:</strong> 招聘群</li>`,
+        summary: `<li><strong>工作地点:</strong> 合川</li><li><strong>福利待遇:</strong> 包吃，月休4天</li><li><strong>年龄要求:</strong> 16-45岁 (女生为主)</li><li><strong>来源:</strong> 招聘群</li>`,
         analysis: '【成功率低】虽然年龄符合，但明确“女生为主”，男生岗位可能很少或没有。',
         analysisClass: 'low',
-        raw: `重庆合川神秘电子厂...\n招聘年龄16-45岁（女生为主）\n...13元+2/小时...\n月工时300-330左右，月工资4000`
+        raw: `重庆合川神秘电子厂，优质企业
+大量招聘学生工（暑假工）
+招聘年龄
+16-45岁（女生为主）
+坐班为主
+1、不需要文化，能踏实干活
+2、不查案底，能上班就行
+普工：主要工作就是把产品上面需要保护的地方贴上保护胶纸...
+早上8点上班，晚上8点下班，接受两班倒，月休4天，包吃工作餐，有宿舍水电费平摊。
+13元+2/小时，学生工工期到8.20号...月工时300-330左右，月工资4000`
     },
     '12': {
         title: '传音配套-科派',
         salary: '16元/小时',
-        summary: `
-            <li><strong>工作地点:</strong> 未知</li>
-            <li><strong>福利待遇:</strong> 不体检，可带手机</li>
-            <li><strong>年龄要求:</strong> 16-40岁 (限女)</li>
-            <li><strong>来源:</strong> 招聘群</li>`,
+        summary: `<li><strong>工作地点:</strong> 未知</li><li><strong>福利待遇:</strong> 不体检，可带手机</li><li><strong>年龄要求:</strong> 16-40岁 (限女)</li><li><strong>来源:</strong> 招聘群</li>`,
         analysis: '【成功率极低】年龄符合，但明确“#限女”，基本没希望。',
         analysisClass: 'low',
-        raw: `6.16[庆祝][庆祝]传音配套 科派不体检\n------招聘要求------\n16-40 岁。#限女。学生工优先！可带手机！可听歌！\n------薪资待遇------\n15+1=16（含餐补）3 个月后 17 元/小时...`
+        raw: `6.16[庆祝][庆祝]传音配套 科派不体检
+
+------招聘要求------
+16-40 岁。#限女。学生工优先！可带手机！可听歌！
+工作内容：非流水线，做手机保护壳和手机防水件，标签等！
+
+------薪资待遇------
+15+1=16（含餐补）3 个月后 17 元/小时
+非流水线，做手机保护壳和手机防水件，标签等！
+宿舍6人间（水电费平摊）超市，快递点，食堂（5-10元，一餐。篮球场,乒乓球场，羽毛球场......`
     },
     '13': {
         title: '保安岗(多数)',
@@ -364,7 +417,11 @@ const jobData = {
         summary: `<li><strong>工作地点:</strong> 各区</li><li><strong>来源:</strong> 多个中介及群聊</li>`,
         analysis: '【已拒绝】绝大多数保安岗位都明确要求成年，这是行业规定，无需再浪费时间询问。',
         analysisClass: 'rejected',
-        raw: `来自 "中介-娅姐姐", "中介-AN00-劳大", "重庆保安信息更新3️⃣不要吹牛" 群聊等多个信息源均明确表示保安岗需要18岁或20岁以上。`
+        raw: `来源：
+1. 中介-娅姐姐: "不行哦。再长一下"
+2. 中介-AN00-劳大: "厂区保安这边都是要18岁以上"
+3. 中介-特靠谱: "成年来找我 兄弟"
+4. 重庆保安信息更新3️⃣不要吹牛 (群聊): 所有岗位要求均为20岁或22岁以上。`
     },
     '14': {
         title: '电影院检票员',
@@ -372,7 +429,8 @@ const jobData = {
         summary: `<li><strong>工作地点:</strong> 未知</li><li><strong>来源:</strong> 招聘科 吕主管</li>`,
         analysis: '【已拒绝】对方已直接回复“１７不行 需要１８”，此路不通。',
         analysisClass: 'rejected',
-        raw: `弦: 17岁的话这个可以吗 9月成年\n中介-招聘科____吕主管: １７不行 需要１８ １７ 只能进厂了`
+        raw: `弦: 17岁的话这个可以吗 9月成年
+中介-招聘科____吕主管: １７不行　需要１８　　１７　只能进厂了`
     },
     '15': {
         title: '工厂普工(多数)',
@@ -380,7 +438,13 @@ const jobData = {
         summary: `<li><strong>工作地点:</strong> 各区</li><li><strong>来源:</strong> 招聘群</li>`,
         analysis: '【不符合】大部分非学生工通道的普通工厂招聘，最低年龄都要求18岁甚至22岁。',
         analysisClass: 'rejected',
-        raw: `万盛耀皮、中联重科、京东方照明、赛力斯物料部等多个普工岗，年龄要求均为18岁、20岁、22岁或23岁起。`
+        raw: `大部分普通厂区招聘信息明确要求成年。
+- 万盛耀皮: 男18-45岁
+- 中联重科: 年龄18-45岁
+- 万盛冠宇: 男生：18-40岁
+- 京东方照明: 22岁-35岁
+- 赛力斯物料部: 男 23-45岁
+- 沪光: 18-45岁`
     },
     '16': {
         title: '技能岗(赛力斯等)',
@@ -388,7 +452,11 @@ const jobData = {
         summary: `<li><strong>工作地点:</strong> 各区</li><li><strong>来源:</strong> 招聘群</li>`,
         analysis: '【不符合】如焊接、数控、维修等技能岗，不仅要求成年，还需要相关经验、证书或大专以上学历。',
         analysisClass: 'rejected',
-        raw: `赛力斯三厂技能岗: 设备维修工、涂装补漆工...\n要求：限男性20-38岁...中专学历及以上...`
+        raw: `赛力斯三厂 🔶 招聘技能岗位
+设备维修工、涂装补漆工、钣金工、模具维修
+——✅✅招聘要求✅✅——
+1、限男性20-38岁...
+2、中专学历及以上（入职必须要提供学历复印件）...`
     },
     '17': {
         title: '营业厅充业绩',
@@ -396,7 +464,19 @@ const jobData = {
         summary: `<li><strong>工作地点:</strong> 未知</li><li><strong>来源:</strong> 中介-Hyh_</li>`,
         analysis: '【高风险-切勿尝试！】这种办电话卡的兼职，在群聊中已被多人指出是为诈骗团伙提供电话卡，存在巨大的个人信息泄露和法律风险！',
         analysisClass: 'risk',
-        raw: `兼职日结：210-300天[庆祝][庆祝]\n[红包]1-3小时可完成✅\n营业厅充业绩兼职薅羊毛...\n电话充量兼职，百分百绿色...`
+        raw: `兼职日结：210-300天[庆祝][庆祝]
+[红包]1-3小时可完成✅
+营业厅充业绩兼职薅羊毛，
+工作人员工号机实名认证操作
+只充量 不使用，费用
+20-30一张，可充10-15张，
+全程免费无任何费用
+没有资费，没有套餐，次月注销，全程免费。
+电话充量兼职，百分百绿色：
+三大运营商营业厅工作人员用工号充一下任务量，每个月都有开卡任务，次月注销，安全业务。
+做了5年安全有保障
+只对接安全项目
+当天结算工资💰💰`
     }
 };
 
