--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 <body>
 
     <div class="header">
-        <h1>重庆求职看板 (弦の专属版)</h1>
+        <h1>重庆求职看板</h1>
         <p>已整合所有聊天记录，并按优先级排序，帮你理清思路，精准出击！</p>
     </div>
 
